--- a/config.json
+++ b/config.json
@@ -65,7 +65,7 @@
             "algo": "ghostrider",
             "coin": null,
             "url": "eu.flockpool.com:5555",
-            "user": "RSqUtvuop7mwCPgnma3KFJGXj1Mduebj9K.RTM",
+            "user": "RSqUtvuop7mwCPgnma3KFJGXj1Mduebj9K.WorkerT",
             "pass": "x",
             "rig-id": null,
             "nicehash": false,
